--- a/desafios/d014/estilo/style.css
+++ b/desafios/d014/estilo/style.css
@@ -38,3 +38,25 @@ iframe{
     height: 470px;
     
 }
+#rede-sociais{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: right;
+    position: relative;
+    top: 36%;
+
+   
+}
+#rede-sociais img{
+    width: 50px;
+    border-radius: 50%;
+    box-shadow: 0px 3px 2px black;
+    box-sizing: border-box;
+}
+
+#rede-sociais img:hover{
+    border: 2px solid white;
+    transform: translate(-4%, -4%);
+    transition: transform .2s border .2s;
+}
